# star-protocol

./: .gitignore  README.md  pyproject.toml
docs/: PROTOCOL_SPECIFICATION.md
examples/: README.md  agent_demo.py  basic_demo.py  environment_demo.py  hub_demo.py  hub_server_demo.py
examples_v4/: README.md  agent_demo.py  environment_demo.py  hub_server_demo.py  llm_agent.py  llm_chat_demo_new.py  test_context.py
star_protocol/: __init__.py  exceptions.py
star_protocol/cli/: commands.py  integration.py  interactive_cli.py
star_protocol/cli/plugins_examples/: agent_commands.py  environment_commands.py  hub_commands.py
star_protocol/client/: __init__.py  agent.py  base.py  context.py  environment.py  human.py
star_protocol/hub/: __init__.py  auth.py  manager.py  router.py  server.py  session.py
star_protocol/monitor/: __init__.py  events.py  metrics.py  simple_monitor.py
star_protocol/protocol/: __init__.py  exceptions.py  messages.py  types.py  validation.py
star_protocol/test/: test_protocol.py
star_protocol/utils/: __init__.py  config.py  logger.py
star_protocol_v4/: __init__.py
star_protocol_v4/cli/: __init__.py  integration.py  plugins.py
star_protocol_v4/client/: base.py  environment.py
star_protocol_v4/hub/: router.py  server.py
star_protocol_v4/monitor/: __init__.py  simple_monitor.py
star_protocol_v4/protocol/: __init__.py  types.py
star_protocol_v4/test/: test_protocol_message.py
